Remove sonar issue